[gd_scene load_steps=23 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Entity/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/map-3.png" type="Texture" id=3]
[ext_resource path="res://Spawner/Spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://Typer/Typer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Ui.gd" type="Script" id=6]
[ext_resource path="res://Resources/xirod.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://UpgradeMenu.gd" type="Script" id=8]
[ext_resource path="res://Resources/Abilities/freeze.png" type="Texture" id=9]
[ext_resource path="res://Abilities.gd" type="Script" id=10]
[ext_resource path="res://UI/UIElement.tscn" type="PackedScene" id=11]
[ext_resource path="res://Resources/BlackSquare.png" type="Texture" id=12]
[ext_resource path="res://Resources/Abilities/nuke.png" type="Texture" id=13]
[ext_resource path="res://Resources/Abilities/shield.png" type="Texture" id=14]
[ext_resource path="res://Resources/Chronometry.mp3" type="AudioStream" id=15]
[ext_resource path="res://EntityName/EntityNameFont.tres" type="DynamicFont" id=16]
[ext_resource path="res://EntityName/EntityNameFontBold.tres" type="DynamicFont" id=17]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.337255, 0.294118, 0.294118, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 7 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." groups=["Players"] instance=ExtResource( 2 )]
position = Vector2( 509, 339 )

[node name="Typer" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 450, 385 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2560, 1920 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="Spawner" parent="." instance=ExtResource( 4 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Ui" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 6 )

[node name="XP" type="ProgressBar" parent="CanvasLayer/Ui"]
anchor_right = 1.0
margin_left = 200.0
margin_right = -200.0
margin_bottom = 23.0
step = 0.1

[node name="Time" type="Label" parent="CanvasLayer/Ui"]
anchor_right = 1.0
margin_left = 400.0
margin_top = 25.0
margin_right = -400.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "12:34"
align = 1
valign = 1

[node name="Level" type="Label" parent="CanvasLayer/Ui"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1180.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Level 45"
align = 2
valign = 1

[node name="AbilitiesContainer" type="VBoxContainer" parent="CanvasLayer/Ui"]
anchor_bottom = 1.0
margin_top = 500.0
margin_right = 64.0
rect_min_size = Vector2( 64, 0 )

[node name="Shield" type="TextureRect" parent="CanvasLayer/Ui/AbilitiesContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 14 )
stretch_mode = 1

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/Ui/AbilitiesContainer/Shield"]
self_modulate = Color( 0.0784314, 0.0627451, 0.0627451, 0.576471 )
anchor_right = 1.0
anchor_bottom = 1.0
texture_progress = ExtResource( 12 )
fill_mode = 5
nine_patch_stretch = true

[node name="Label" type="Label" parent="CanvasLayer/Ui/AbilitiesContainer/Shield"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="CanvasLayer/Ui/AbilitiesContainer"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 82.0

[node name="Freeze" type="TextureRect" parent="CanvasLayer/Ui/AbilitiesContainer"]
margin_top = 86.0
margin_right = 64.0
margin_bottom = 150.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/Ui/AbilitiesContainer/Freeze"]
self_modulate = Color( 0.0784314, 0.0627451, 0.0627451, 0.576471 )
anchor_right = 1.0
anchor_bottom = 1.0
texture_progress = ExtResource( 12 )
fill_mode = 5
nine_patch_stretch = true

[node name="Label" type="Label" parent="CanvasLayer/Ui/AbilitiesContainer/Freeze"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label2" type="Label" parent="CanvasLayer/Ui/AbilitiesContainer"]
margin_top = 154.0
margin_right = 64.0
margin_bottom = 168.0

[node name="Nuke" type="TextureRect" parent="CanvasLayer/Ui/AbilitiesContainer"]
margin_top = 172.0
margin_right = 64.0
margin_bottom = 236.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 13 )
stretch_mode = 1

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/Ui/AbilitiesContainer/Nuke"]
self_modulate = Color( 0.0784314, 0.0627451, 0.0627451, 0.576471 )
anchor_right = 1.0
anchor_bottom = 1.0
texture_progress = ExtResource( 12 )
fill_mode = 5
nine_patch_stretch = true

[node name="Label" type="Label" parent="CanvasLayer/Ui/AbilitiesContainer/Nuke"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UpgradeMenu" type="Panel" parent="CanvasLayer/Ui"]
visible = false
self_modulate = Color( 0.25098, 0.203922, 0.203922, 0.729412 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
script = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Ui/UpgradeMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0

[node name="Panel" type="Panel" parent="CanvasLayer/Ui/UpgradeMenu/HBoxContainer"]
margin_right = 446.0
margin_bottom = 600.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Ui/UpgradeMenu/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="CanvasLayer/Ui/UpgradeMenu/HBoxContainer/Panel/VBoxContainer"]
margin_right = 446.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 3 )
text = "Boosters"
align = 1
valign = 1

[node name="Icon" type="TextureRect" parent="CanvasLayer/Ui/UpgradeMenu/HBoxContainer/Panel/VBoxContainer"]
margin_top = 64.0
margin_right = 446.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 192 )
expand = true
stretch_mode = 6

[node name="Desc" type="Label" parent="CanvasLayer/Ui/UpgradeMenu/HBoxContainer/Panel/VBoxContainer"]
margin_top = 260.0
margin_right = 446.0
margin_bottom = 496.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Move 7% faster."
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="RichTextLabel" parent="CanvasLayer/Ui/UpgradeMenu/HBoxContainer/Panel/VBoxContainer" instance=ExtResource( 11 )]
text = "left"
entity_name = "left"

[node name="Label" type="Label" parent="CanvasLayer/Ui/UpgradeMenu/HBoxContainer"]
margin_left = 450.0
margin_top = 293.0
margin_right = 550.0
margin_bottom = 307.0
rect_min_size = Vector2( 100, 0 )

[node name="Panel2" type="Panel" parent="CanvasLayer/Ui/UpgradeMenu/HBoxContainer"]
margin_left = 554.0
margin_right = 1000.0
margin_bottom = 600.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Ui/UpgradeMenu/HBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="CanvasLayer/Ui/UpgradeMenu/HBoxContainer/Panel2/VBoxContainer"]
margin_right = 446.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 3 )
text = "Boosters"
align = 1
valign = 1

[node name="Icon" type="TextureRect" parent="CanvasLayer/Ui/UpgradeMenu/HBoxContainer/Panel2/VBoxContainer"]
margin_top = 64.0
margin_right = 446.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 192 )
expand = true
stretch_mode = 6

[node name="Desc" type="Label" parent="CanvasLayer/Ui/UpgradeMenu/HBoxContainer/Panel2/VBoxContainer"]
margin_top = 260.0
margin_right = 446.0
margin_bottom = 496.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Move 7% faster."
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="RichTextLabel" parent="CanvasLayer/Ui/UpgradeMenu/HBoxContainer/Panel2/VBoxContainer" instance=ExtResource( 11 )]
text = "right"
entity_name = "right"

[node name="StartMenu" type="Panel" parent="CanvasLayer/Ui"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Ui/StartMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Ui/StartMenu/CenterContainer"]
margin_left = 610.0
margin_top = 410.0
margin_right = 610.0
margin_bottom = 410.0

[node name="StartScreen" type="Control" parent="CanvasLayer/Ui/StartMenu/CenterContainer/VBoxContainer"]

[node name="cont" parent="CanvasLayer/Ui/StartMenu/CenterContainer/VBoxContainer/StartScreen" instance=ExtResource( 11 )]
margin_left = -180.0
margin_top = -44.0
margin_right = 220.0
margin_bottom = -4.0
entity_name = "Start"

[node name="exit" parent="CanvasLayer/Ui/StartMenu/CenterContainer/VBoxContainer/StartScreen" instance=ExtResource( 11 )]
margin_left = -180.0
margin_top = 0.0
margin_right = 220.0
margin_bottom = 40.0
entity_name = "Exit"

[node name="NameScreen" type="Control" parent="CanvasLayer/Ui/StartMenu/CenterContainer/VBoxContainer"]
visible = false
margin_top = 4.0
margin_bottom = 4.0

[node name="Label" type="Label" parent="CanvasLayer/Ui/StartMenu/CenterContainer/VBoxContainer/NameScreen"]
margin_left = -331.0
margin_top = -272.0
margin_right = 367.0
margin_bottom = -241.0
custom_fonts/font = SubResource( 5 )
text = "Type your name and press enter:"

[node name="PauseMenu" type="Panel" parent="CanvasLayer/Ui"]
visible = false
self_modulate = Color( 0.25098, 0.203922, 0.203922, 0.729412 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Ui/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Ui/PauseMenu/CenterContainer"]
margin_left = 400.0
margin_top = 358.0
margin_right = 800.0
margin_bottom = 442.0

[node name="cont" parent="CanvasLayer/Ui/PauseMenu/CenterContainer/VBoxContainer" instance=ExtResource( 11 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 100.0
margin_bottom = 30.0
entity_name = "Continue"

[node name="exit" parent="CanvasLayer/Ui/PauseMenu/CenterContainer/VBoxContainer" instance=ExtResource( 11 )]
margin_left = 0.0
margin_top = 34.0
margin_right = 100.0
margin_bottom = 64.0
entity_name = "Exit"

[node name="DeathMenu" type="Panel" parent="CanvasLayer/Ui"]
visible = false
self_modulate = Color( 0.25098, 0.203922, 0.203922, 0.729412 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Ui/DeathMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Ui/DeathMenu/CenterContainer"]
margin_left = 451.0
margin_top = 361.0
margin_right = 749.0
margin_bottom = 439.0

[node name="YouLostLabel" type="Label" parent="CanvasLayer/Ui/DeathMenu/CenterContainer/VBoxContainer"]
margin_right = 298.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 17 )
text = "You lost"

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Ui/DeathMenu/CenterContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 298.0
margin_bottom = 78.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 16 )
text = "12:34"
align = 1
valign = 1

[node name="Abilities" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="ShieldCD" type="Timer" parent="Abilities"]
wait_time = 15.0
one_shot = true

[node name="FreezeCD" type="Timer" parent="Abilities"]
wait_time = 15.0
one_shot = true

[node name="NukeCD" type="Timer" parent="Abilities"]
wait_time = 60.0
one_shot = true

[node name="FreezeTimer" type="Timer" parent="Abilities"]
wait_time = 5.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
autoplay = true

[connection signal="new_enemy" from="Spawner" to="." method="_on_Spawner_new_enemy"]
[connection signal="timeout" from="Abilities/FreezeTimer" to="Abilities" method="_on_FreezeTimer_timeout"]
